# ai-chat-bot

./: .gitignore  README.md  pyproject.toml
src/bot/: config.py  main.py  prompt_builder.py
src/bot/database/: models.py  session.py
src/bot/handlers/: commands.py  message.py  start.py
src/bot/services/: ai_service.py  db_service.py
